# WebScrapingApplication

./: LICENSE  README.md  docker-compose.yaml  main.py  models.py  pyproject.toml  seeds.py
web_scraper/web_scraper/: items.py  pipelines.py  settings.py
web_scraper/web_scraper/spiders/: quotes_spider.py
